
      Malay

    - the following translations were updated:

      Albanian

    - Internals: creation_time, last_modification_time, last_access_time
      members added to the winx_file_info structure
    - bug fix: winx_wcsistr, winx_wcsmatch, winx_patfind, winx_patcmp 
      routines forced to work properly for all the characters 
      (they worked well for English characters only)
    - winx_toupper, winx_tolower, winx_wcsistr, winx_stristr, winx_wcsmatch,
      winx_patfind, winx_patcmp routines optimized for speed
    - winx_towupper, winx_towlower, winx_wcsupr, winx_wcslwr, winx_wcsicmp
      routines added to zenwinx library to be used instead of the fake 
      Windows routines working properly for English letters only
    - udefrag_towupper, udefrag_towlower, udefrag_wcsupr, udefrag_wcslwr, 
      udefrag_wcsicmp routines added to udefrag library for the same reasons
      as mentioned above


  Version 5.0.7  2012-09-01
  ------------------------------------------------------------------------------
    - added compatibility with the following software by exclusion their 
      essential files from moving (excluded files are listed in brackets):
      SafeBoot (safeboot.fs), Symantec GoBack (Gobackio.bin),
      PGP Whole Disk Encryption (PGPWDE0*), Acronis OS Selector (bootwiz*),
      DriveCrypt (BootAuth?.sys), DiskCryptor ($dcsys$)
    - added crash handling code to the GUI, it shows the crash information
      on startup when the program crashed during the last run
    - changed unit suffixes from lower case 'b' to capital 'B',
      this is going conform with the SI units.
      Current scripts will still function, since we ignore character case.
    - error messages of the command line tool redirected to stderr
      while everything else - to stdout to comply with the common practice
    - fixed the progress indicator overflow; now it should never exceed 100%
    - added option to specify a custom cluster map background color